<resources>
    <string name="app_name">Thunder</string>

    <string name="book_list">Book List</string>
    <string name="rounded_image_view">Rounded ImageView</string>
    <string name="browser_input">Browser</string>
    <string name="file_sandbox">File Sandbox</string>
    <string name="file_sd_card">File Sd Card</string>
    <string name="db_registry">Db Registry</string>
    <string name="util_registry">Util Registry</string>
    <string name="util_dimension_converter">Util Dimension Converter</string>
    <string name="state_version">State Version</string>
    <string name="state_contacts">State Contacts</string>
    <string name="state_display_pixels">State Display Pixels</string>
    <string name="state_location_state">State Location State</string>
    <string name="state_phone_state">State Phone State</string>
    <string name="state_network_state">State Network State</string>
    <string name="ht_network_change_receiver">HT Network Change Receiver</string>
    <string name="test">Test</string>

    <string name="boolean_true">True</string>
    <string name="boolean_false">False</string>
    <string name="undefined">Undefined</string>
    <string name="text_view_result">Result</string>
    <string name="text_view_form">Form</string>
    <string name="button_submit">Submit</string>

    <string name="registry_int">Int：</string>
    <string name="registry_string">String：</string>
    <string name="registry_long">Long：</string>
    <string name="registry_float">Float：</string>
    <string name="registry_boolean">Boolean：</string>

    <string name="version_code">版本号：</string>
    <string name="version_name">版本名：</string>
    <string name="package_name">包名：</string>

    <string name="device_id">设备识别码：</string>
    <string name="subscriber_id">设备Id：</string>
    <string name="network_operator">网络运营商类型：</string>
    <string name="network_operator_name">网络运营商名称：</string>
    <string name="android_id">Android Id：</string>
    <string name="language">手机系统语言：</string>

    <string name="wifi_name">Wifi名称：</string>
    <string name="mac">Mac地址：</string>
    <string name="wifi_mac">Wifi-Mac：</string>
    <string name="host_mac">Host-Mac：</string>
    <string name="ip">Ip：</string>
    <string name="wifi_ip">Wifi-Ip：</string>
    <string name="host_ip">Host-Ip：</string>
    <string name="connect_type">联网类型：</string>
    <string name="connect_type_desc">0-未知、1-Wifi、2-2G、3-3G、4-4G</string>
    <string name="carrier_type">移动运营商类型：</string>
    <string name="carrier_type_desc">0-未知、1-移动、2-联通、3-电信</string>

    <string name="display_pixels_width">屏幕X轴像素点个数：</string>
    <string name="display_pixels_height">屏幕Y轴像素点个数：</string>
    <string name="display_pixels_density">屏幕逻辑密度：</string>
    <string name="display_pixels_dpi">屏幕每英寸物理像素点个数：</string>
    <string name="display_pixels_xdpi">屏幕X轴每英寸物理像素点个数：</string>
    <string name="display_pixels_ydpi">屏幕Y轴每英寸物理像素点个数：</string>
    <string name="display_pixels_status_bar_height">状态栏高度：</string>

    <string name="file_name">文件名：</string>
    <string name="content">内容：</string>
    <string name="write_data">重新写入：</string>
    <string name="append_write_data">追加写入：</string>

    <string name="access_network_state">Access Network State：</string>
    <string name="network_connected">Network Connected：</string>
    <string name="network_wifi">Network Wifi：</string>
    <string name="network_mobile">Network Mobile：</string>

    <string name="is_access_fine_location_granted">ACCESS_FINE_LOCATION权限：</string>
    <string name="is_access_coarse_location_granted">ACCESS_COARSE_LOCATION权限：</string>
    <string name="is_gps_enabled">是否开启GPS：</string>
    <string name="is_passive_enabled">是否支持位置更新监测器：</string>
    <string name="is_network_enabled">是否支持基站或Wifi获取位置信息：</string>
    <string name="to_setting">To Setting</string>

    <string name="dimension_dp">DP：</string>
    <string name="dimension_px">PX：</string>
    <string name="dimension_sp">SP：</string>
    <string name="arrow_right">-></string>

    <string name="contacts_id">ID：</string>
    <string name="contacts_display_name">Name：</string>
    <string name="contacts_phone_numbers">Phones：</string>
    <string name="contacts_emails">Emails：</string>

    <string name="tips_sd_card_path">SD Card Directory：</string>
    <string name="tips_sd_card_permission_denied">SD Card Permission Denied</string>
    <string name="tips_sd_card_not_exists">SD Card Not Exists</string>
    <string name="tips_fragment_not_exists">Fragment Not Exists</string>

    <string name="browser_received_error">点击屏幕，重新加载</string>
    <string name="enter_url_hint">请输入网址（置空，打开示例网址）</string>
    <string name="enter_url">打开网址</string>

    <string name="readme">
1、示例网址：本地.assets/browser/demo.html
2、说明文档：GitHub-README.md
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
